# llm_chatbot_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  benchmark.py  docker-compose.yml  env.example  justfile  locustfile.py  main.py  memory_profiler.py  pyproject.toml  pytest.ini
app/: logging_config.py  main.py  middleware.py  settings.py
app/clients/: llm.py
app/schemas/: __init__.py  question.py  response.py
nginx/: nginx.conf
tests/: conftest.py  test_helpers.py  test_providers.py  test_question.py
