[project]
name = "llm-chatbot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "openai>=1.84.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.13",
    "tenacity>=9.1.2",
    "uvicorn>=0.34.3",
    "locust>=2.32.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q -ra"
pythonpath = ["."]
testpaths = ["tests"]
